2002-06-12  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>

	* doxy.cfg (GENERATE_TAGFILE): ../doc/api/tags renamed to
	../doc/api/opptags.xml

2002-06-11  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>

	* doxy.cfg (GENERATE_TAGFILE): generate ../doc/api/tags. This
	tag file can be included when generating model documentation

2002-05-28  Frank Paehlke  <paehlke@tm.uni-karlsruhe.de>

	* defs.h: added macro USE_STD_NAMESPACES for C++ compilers with
	standard library and namespaces (currently GNU C++ >= 3.0)
	
	* cdensity.h, cenvir.h, chist.h, cksplit.h, cmodule.h, cobject.h,
	cpsquare.h, csimul.h, cstat.h, ctopo.h, ctypes.h, cvarhist.h,
	envirext.h: Use standard headers and namespaces if
	USE_STD_NAMESPACES is defined

	* ctopo.h: check if INFINITY is already defined

2002-05-04  ------ omnetpp-2.2 released ------

2002-04-06  Andras Varga

	* defs.h: version number upped to 2.2

2002-03-05  Andras Varga

	* cgate.h: cGate::setDisplayString() got an optional second parameter,
        bool immediate

2002-03-04  Andras Varga

	* cobject.h: cObject::free(cObject *) renamed to dealloc() to avoid
        misunderstandings

	* coutvect.h: new methods: valuesReceived(), valuesStored()

        * cobject.h, cmodule.h, cgate.h, cpar.h, csimul.h:
        fullPath2(buf,bufsize) renamed to fullPath(buf,bufsize). cObject's
        fullPath() method (without arg) had to be duplicated in all affected
        classes because a (seemingly meaningless) C++ rule says overloaded
        virtual functions must be redefined together.

2002-03-04  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>

	* util.h (class opp_string): use delete[] in functions
	~opp_string, allocate and operator=

2002-03-03  Andras Varga

        * protocol.h: added constants: PR_ICMP, PR_UDP_APP. [suggested by
        Johnny Lai]

2002-03-03  Andras Varga

       	* cpar.h: valueChanges() renamed to beforeChange(); corresponding
        afterChange() method added
