@@ -1,3 +1,9 @@
+2002-06-17  Andras Varga
+
+	* cpar.cc: new feature: cPar can use compiled expressions subclassed 
+	from cDoubleExpression (new class). This is needed for code generated
+	by the new, nedxml-based nedc. 
+
 2002-05-28  Frank Paehlke  <paehlke@tm.uni-karlsruhe.de>
 
 	* cdensity.cc, chist.cc, cksplit.cc, cmodule.cc, cobject.cc,
