@@ -1,3 +1,9 @@
+2002-06-17  Andras Varga
+
+	* cpar.cc: new feature: cPar can use compiled expressions subclassed 
+	from cDoubleExpression (new class). This is needed for code generated
+	by the new, nedxml-based nedc. 
+
 2002-06-12  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>
 
 	* doxy.cfg (GENERATE_TAGFILE): ../doc/api/tags renamed to
